<resources>
    <string name="app_name">Latihan DTS 2020</string>
    <string name="lbl_nama">Masukkan Nama Anda</string>
    <string name="btn_tampil_nama">Tampilkan</string>
    <string name="stringLipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="proyek2">Proyek 2</string>
    <string name="email">Email</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="asalsekolah">Asal Sekolah</string>
    <string name="alamat">Alamat Tinggal</string>
    <string name="simpan">Simpan</string>
    <string name="logout">Logout</string>
</resources>