<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namalengkap"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editNama"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asalsekolah"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editAsal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editAlamat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/simpan"
                android:textColor="#fff"
                android:textSize="14sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>